--- a/src/pages/homepage.css
+++ b/src/pages/homepage.css
@@ -16,7 +16,7 @@
     --ca-hover-color : #f0fff0 ;
     --ca-icon-content-bg-color: #eb2f2fe3;
     --ca-dark-bg-color: #393734;
-
+    --white-color: white ;
 }
 
 
@@ -54,7 +54,7 @@ main{
     font-size: 1rem;
     font-weight: 200;
     color : var(--ca-primary-color);
-    background-color: white;
+    background-color: var(--white-color);
     border : none ;
     cursor: pointer;
 }
@@ -77,7 +77,7 @@ main{
     border: none;
 }
 .header-right-side{
-    gap : rem ;
+    gap : 0.5rem ;
     margin-right : 0.5rem ;
 }
 .badge-icon{
@@ -94,23 +94,17 @@ main{
     border-radius : 50% ;
     top : -1rem ;
     right : -1rem ;
-    color : white ;
+    color : var(--white-color) ;
 
 }
-
-
-
-
 /* hero-section  */
-.hero-section{
 
-}
 .hero-img img{
     width : 65% ;
 }
 .hero-overlay{
     position: absolute;
-    color : white ;
+    color : var(--white-color) ;
     top : 17rem ;
 }
 .hero-1{
@@ -118,11 +112,11 @@ main{
 }
 .btn-primary{
     background-color: var(--ca-primary-color);
-    color : white ;
+    color : var(--white-color) ;
 }
 .btn-primary:hover{
     background-color: var(--ca-primary-color-lighter);
-    color : white ;
+    color : var(--white-color) ;
 }
 
 
@@ -146,11 +140,11 @@ main{
     background-color: var(--ca-dark-bg-color);
 }
 .page-footer{
-    color : white ;
+    color : var(--white-color) ;
 }
 
 .fa-twitter,
 .fa-linkedin,
 .fa-github{
-    color : white ;
+    color : var(--white-color) ;
 }
