--- a/src/pages/signin/signin.css
+++ b/src/pages/signin/signin.css
@@ -3,7 +3,7 @@
 
 .signin-main-container{
     display: grid;
-    grid-template-columns: auto 1fr auto;
+    grid-template-rows: auto 1fr auto;
     min-height : 100vh ;
     gap : 1rem ;
 }
@@ -47,7 +47,7 @@
 }
 .checkbox-text{
     font-size : 1rem ;
-    padding-left : 5px ;
+    padding-left : 3px ;
 }
 
 .btn-primary{
