--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    height : 80px;
     width : 100% ;
     box-shadow: 0 5px 3px -3px var(--box-shadow);
 }
@@ -18,6 +19,7 @@
     font-size : 2.5rem ;
     font-weight: 600;
     color: var(--ca-primary-color); 
+    text-decoration: none;
 }
 .btn{
     padding: 0.7rem 1rem;
