fix : added links and edited text decoration

--- a/src/pages/common.css
+++ b/src/pages/common.css
@@ -220,6 +220,9 @@
 .btn-active{
     background-color : var(--ca-hover-color);
 }
+.text-deco-none{
+    text-decoration: none;
+}
 
 /* list */
 .list-deco-none{
