--- a/src/pages/common.css
+++ b/src/pages/common.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap'); 
+
+
 :root{
     --box-shadow: rgb(0 0 0 / 0.2);
     font-family: 'Montserrat', sans-serif;
@@ -18,7 +21,7 @@
     box-sizing: border-box;
 }
 
-
+/* grid */
 .grid{
     display : grid;
     width : 100%;
@@ -32,11 +35,12 @@
 .grid-4{
     grid-template-columns : 1fr 1fr 1fr 1fr ;
 }
+
+/* flex */
 .flex-center{
     display: flex;
     align-items: center;
     justify-content : center ;
-
 }
 .flex-column{
     display : flex ;
@@ -48,9 +52,19 @@
     flex-direction : row ;
     align-items : center ;
 }
+.no-flex-wrap{
+    flex-wrap: nowrap;
+}
+.flex-wrap{
+    flex-wrap : wrap ;
+}
 .justify-content-center{
     justify-content : center ;
 }
+.space-bw{
+    justify-content : space-between ;
+}
+
 
 .gap-sm{
     gap : 1rem ;
@@ -62,7 +76,7 @@
     gap: 2.5rem ;
 }
 
-
+/* typography */
 .h1,h1{
     font-size : 3rem ;
 }
@@ -122,7 +136,7 @@
 .text-align-left{
     text-align: left;
 }
-
+/* margin */
 .margin-sm{
     margin : 1rem;
 }
@@ -159,6 +173,7 @@
     margin-left: 2.5rem;
 }
 
+/* padding */
 .padder-sm{
     padding : 1rem ;
 }
@@ -196,14 +211,6 @@
 }
 
 
-.list-deco-none{
-    list-style: none;
-    padding-inline-start: 0;
-}
-.list-inline{
-    display: inline;
-}
-
 /* button */
 .btn-primary{
     background-color: var(--ca-primary-color);
@@ -213,3 +220,80 @@
     background-color: var(--ca-primary-color-lighter);
     color : white ;
 }
+.btn-active{
+    background-color : var(--ca-hover-color);
+}
+.text-deco-none{
+    text-decoration: none;
+}
+
+/* list */
+.list-deco-none{
+    list-style: none;
+    padding-inline-start: 0;
+}
+.list-inline{
+    display: inline;
+}
+.list{
+    display : flex;
+    flex-direction : column;
+    justify-content: space-between ;
+    flex-wrap : wrap;
+    padding: 1.5rem ;
+    border-radius: 5px;
+}
+.list-item{
+    font-size : 0.95rem ;
+}
+.list-style-none{
+    list-style: none;
+}
+
+/* card */
+.card {
+    font-family: 'Montserrat', sans-serif;
+    border-radius: 10px;
+    box-shadow: 0px 1px 10px rgb(146 140 140 / 50%);
+    margin : 1.5rem ;
+}
+.card-vertical {
+    width: 300px;
+    height: 450px;
+    display: flex;
+    flex-direction: column;
+}
+.card-horizontal {
+    width: 650px ;
+    height: 300px;
+    display : flex;
+    flex-direction: row;
+}
+.img-responsive{
+    height: 100%;
+    width : 100%;
+}
+
+.card-description-primary .card-primary-text {
+    color: var(--ca-primary-color);
+    font-style: italic;
+}
+.card-description-primary .card-price {
+    color: var(--ca-secondary-color);
+}
+.wishlist-icon{
+    color : var(--danger-text);
+}
+.wishlist-icon:hover{
+    font-weight: 700;
+    cursor: pointer;
+}
+.card-cta {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    margin-top : 15px ;
+    align-items: center;
+    gap: 2rem;
+}
+
