--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height : 80px;
+    height : 5rem;
     width : 100% ;
     box-shadow: 0 5px 3px -3px var(--box-shadow);
 }
